--- a/components/box.module.css
+++ b/components/box.module.css
@@ -12,7 +12,7 @@
 }
 
 .proj h1 {
-    font-family: IBM Plex Mono;
+    font-family: 'IBM Plex Mono';
     text-align: center;
     word-wrap: break-word;
     word-break: break-all;
