--- a/components/layout.module.css
+++ b/components/layout.module.css
@@ -2,6 +2,8 @@
 
 @import url('https://fonts.googleapis.com/css2?family=Work Sans:wght@600&display=swap'); /* WORK SANS BOLD */
 
+@import url('https://fonts.googleapis.com/css2?family=IBM Plex Mono:wght@400&display=swap'); /* WORK SANS REGULAR */
+
 .container {
   margin: auto;
   display: grid;
