--- a/components/layout.module.css
+++ b/components/layout.module.css
@@ -21,7 +21,7 @@
   text-align: center;
 }
 
-.header a:hover {
+.contactButton:hover {
   color: rgb(77, 77, 77);
   background-color: #cdcdcd;
 }
@@ -34,7 +34,7 @@
   margin: 0 5vw;
 }
 
-.header a {
+.contactButton {
   background-color: #b0b0b0;
   color: #000;
   padding: 0.5rem 0.8125rem;
