--- a/components/contact.module.css
+++ b/components/contact.module.css
@@ -6,9 +6,9 @@
     border-radius: 12px;
     border: 1px solid var(--borda);
     justify-items: center;
-    width: 30rem;
+    width: 20rem;
     height: fit-content;
-    padding: 2.5rem;
+    padding: 1rem;
 }
 
 .imgcard img {
@@ -18,6 +18,9 @@
 }
 
 .imgcard {
+    width: 10rem;
+    height: 10rem;
+    margin: 1rem;
     padding: 1rem;
     border-radius:7rem;
     border: #0000006c 1px solid;
@@ -39,14 +42,15 @@
 
 
 .contact a {
-    color: #fb0;
+    color: #0059ff;
     text-decoration: none;
     transition: ease-in;
     transition-duration: .2s;
 }
 
 .contact a:hover {
-    color: #b58e00;
+    color: #003eb2;
+    text-shadow: #7aa8ff 1px 0px 2px;
 }
 
 .socialMedia {
